Enum RoadmapStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

Enum Difficulty {
  UNKNOWN
  EASY
  MEDIUM
  HARD
}

Enum ProgressStatus {
  SOLVED
  ATTEMPTED
  REVISE
}

Enum GithubSyncStatus {
  NOT_SYNCED
  PENDING
  SYNCED
  FAILED
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [unique, not null]
  name varchar
  password_hash varchar [note: 'Null for OAuth users, hashed string for email/password auth']
  is_email_verified boolean [default: false, not null]
  email_verified_at timestamp
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]
}

Table roadmaps {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  title varchar [not null]
  source_type varchar [not null, note: 'pdf, drive_url, or manual']
  source_url text
  status RoadmapStatus [not null, default: 'COMPLETED']
  error_message text [note: 'Error details if status is FAILED']
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]

  indexes {
    user_id
    source_url
    status
  }
}

Table problems {
  id uuid [pk, default: `gen_random_uuid()`]
  roadmap_id uuid [not null]
  title varchar [not null]
  topic varchar [not null]
  difficulty Difficulty [not null, default: 'UNKNOWN']
  platform varchar [note: 'Canonical platform e.g. LeetCode, GeeksforGeeks, CodeStudio']
  external_url text
  canonical_slug varchar [note: 'Unique slug for cross-referencing e.g. two-sum']
  platform_problem_id varchar
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]

  indexes {
    roadmap_id
    canonical_slug
  }
}

Table roadmap_problems {
  id uuid [pk, default: `gen_random_uuid()`]
  roadmap_id uuid [not null]
  problem_id uuid [not null]
  topic varchar [not null, note: 'Arrays, DP, Graphs as categorized in this specific roadmap']
  original_title varchar [not null]
  original_url text
  original_category varchar
  original_difficulty Difficulty [not null, default: 'UNKNOWN']
  order_index int [default: 0, not null]
  created_at timestamp [default: `now()`, not null]

  indexes {
    (roadmap_id, problem_id) [unique]
    roadmap_id
    problem_id
  }
}

Table progress_events {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  problem_id uuid [not null]
  status ProgressStatus [not null]
  notes text
  github_sync_status GithubSyncStatus [default: 'NOT_SYNCED', not null]
  github_repo varchar
  github_file_path varchar
  github_synced_at timestamp
  completed_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]

  indexes {
    (user_id, problem_id)
    user_id
    problem_id
    github_sync_status
  }
}

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_family varchar [not null]
  hashed_token varchar [unique, not null]
  ip_address varchar
  user_agent text
  revoked boolean [default: false, not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`, not null]

  indexes {
    user_id
    token_family
    hashed_token
    expires_at
  }
}

// Foreign Key Relationships
Ref: roadmaps.user_id > users.id [delete: cascade]
Ref: problems.roadmap_id > roadmaps.id [delete: cascade]
Ref: roadmap_problems.roadmap_id > roadmaps.id [delete: cascade]
Ref: roadmap_problems.problem_id > problems.id [delete: cascade]
Ref: progress_events.user_id > users.id [delete: cascade]
Ref: progress_events.problem_id > problems.id [delete: cascade]
Ref: sessions.user_id > users.id [delete: cascade]


